tests/baselines/reference/destructuringParameterDeclaration4.errors.txt
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(11,13): error TS2370: A rest parameter must be of an array type.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(13,13): error TS2370: A rest parameter must be of an array type.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(14,17): error TS1047: A rest parameter cannot be optional.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(15,16): error TS1048: A rest parameter cannot have an initializer.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(20,19): error TS2345: Argument of type '为真' is not assignable to parameter of type '文字 | 数字'.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(21,7): error TS2552: Cannot find name 'array2'. Did you mean 'Array'?
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(22,4): error TS2345: Argument of type '[数字, 数字, 文字, 真假, 真假]' is not assignable to parameter of type '[任意, 任意, [[任意]]]'.
  Types of property '2' are incompatible.
    Type '文字' is not assignable to type '[[任意]]'.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(23,4): error TS2345: Argument of type '[数字, 数字]' is not assignable to parameter of type '[任意, 任意, [[任意]]]'.
  Property '2' is missing in type '[数字, 数字]'.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(24,4): error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.
  Type '文字 | 数字' is not assignable to type '数字'.
    Type '文字' is not assignable to type '数字'.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(29,17): error TS1317: A parameter property cannot be declared using a rest parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(34,22): error TS2304: Cannot find name 'E1'.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(34,28): error TS2304: Cannot find name 'E'.


==== tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts (12 errors) ====
    // If the parameter is a rest parameter, the parameter type is any[]
    // A type annotation for a rest parameter must denote an array type.
    
    // RestParameter:
    //     ...   Identifier   TypeAnnotation(opt)
    
    type arrayString = Array<String>
    type someArray = Array<String> | number[];
    type stringOrNumArray = Array<String|Number>;
    
    function a0(...x: [number, number, string]) { }  // Error, rest parameter must be array type
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
    function a1(...x: (number|string)[]) { }
    function a2(...a: someArray) { }  // Error, rest parameter must be array type
                ~~~~~~~~~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
    function a3(...b?) { }            // Error, can't be optional
                    ~
!!! error TS1047: A rest parameter cannot be optional.
    function a4(...b = [1,2,3]) { }   // Error, can't have initializer
                   ~
!!! error TS1048: A rest parameter cannot have an initializer.
    function a5([a, b, [[c]]]) { }
    function a6([a, b, c, ...x]: number[]) { }
    
    
    a1(1, 2, "hello", true);  // Error, parameter type is (number|string)[]
                      ~~~~
!!! error TS2345: Argument of type '为真' is not assignable to parameter of type '文字 | 数字'.
    a1(...array2);            // Error parameter type is (number|string)[]
          ~~~~~~
!!! error TS2552: Cannot find name 'array2'. Did you mean 'Array'?
    a5([1, 2, "string", false, true]);       // Error, parameter type is [any, any, [[any]]]
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[数字, 数字, 文字, 真假, 真假]' is not assignable to parameter of type '[任意, 任意, [[任意]]]'.
!!! error TS2345:   Types of property '2' are incompatible.
!!! error TS2345:     Type '文字' is not assignable to type '[[任意]]'.
    a5([1, 2]);                              // Error, parameter type is [any, any, [[any]]]
       ~~~~~~
!!! error TS2345: Argument of type '[数字, 数字]' is not assignable to parameter of type '[任意, 任意, [[任意]]]'.
!!! error TS2345:   Property '2' is missing in type '[数字, 数字]'.
    a6([1, 2, "string"]);                   // Error, parameter type is number[]
       ~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.
!!! error TS2345:   Type '文字 | 数字' is not assignable to type '数字'.
!!! error TS2345:     Type '文字' is not assignable to type '数字'.
    
    
    var temp = [1, 2, 3];
    class C {
        constructor(public ...temp) { }  // Error, rest parameter can't have properties
                    ~~~~~~~~~~~~~~
!!! error TS1317: A parameter property cannot be declared using a rest parameter.
    }
    
    // Rest parameter with generic
    function foo1<T extends Number>(...a: T[]) { }
    foo1(1, 2, "string", E1.a, E.b);  // Error
                         ~~
!!! error TS2304: Cannot find name 'E1'.
                               ~
!!! error TS2304: Cannot find name 'E'.
    
    
    